--- a/src/app/addcourses/addcourses.component.html
+++ b/src/app/addcourses/addcourses.component.html
@@ -50,13 +50,14 @@
     <div class="text-center">
     <button type="button" class="btn btn-primary" (click)="calculateCoreCoursesSatisfied()">Check Requirement</button></div>
   </div>
-  <div *ngIf="coreCoursesLeft > 0 || csAdvancedCourses.length < 2; else noCoreCourses">
-    <div class="text-center"><p>{{ coreCoursesLeft }} core courses left to reach the minimum of 5.</p>
+  <div *ngIf="coreCoursesSatisfied <= 5 && advancedCourseflag < 1; else noCoreCourses">
+    <div class="text-center">
+      <p>{{ coreCoursesSatisfied >= 5? 'Requirement for core courses met.':'At least 5 core courses should be chosen'}} </p>
       <p>{{ csAdvancedCourses.length >= 2 && advancedCourseflag == 1? 'Requirement for advanced courses met.' : 'At least four courses must be chosen from the advanced courses. You need at least 2 CS advanced courses.' }}</p>
     </div>
       <!-- <p>{{ advancedCoursesLeft }} advanced courses left to meet the requirement.</p> -->
   </div>
   <ng-template #noCoreCourses>
-    <div class="text-center"><p>You have met the minimum requirement of 5 core courses.</p></div> 
+    <div class="text-center"><p>You have met the minimum requirement for Master in CS degree.</p></div> 
   </ng-template>
   
