Added course catalog and status

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <a class="navbar-brand" href="#">Degree Requirement Analyser</a>
+    <a class="navbar-brand" href="#">CS Degree Req Analyser</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,8 +7,11 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          
         </li>
-        
+        <li class="nav-item">
+        <a class="nav-link" href="https://catalog.gmu.edu/colleges-schools/engineering-computing/school-computing/computer-science/computer-science-ms/#requirementstext" target="_blank">CS course catalog</a>
+      </li>
       </ul>
     </div>
   </nav>
