--- a/src/app/addcourses/addcourses.component.html
+++ b/src/app/addcourses/addcourses.component.html
@@ -23,7 +23,7 @@
       </div> -->
       <button type="submit" class="btn btn-primary">Add </button>
     </form>
-  
+  <p><strong>Note: Refer course catalog to add courses</strong></p>
     <h2 class="mt-4">Course List</h2>
     <table class="table">
       <thead>
@@ -53,7 +53,9 @@
   </div>
   <div *ngIf="coreCoursesSatisfied <= 5 && advancedCourseflag < 1; else noCoreCourses">
     <div class="text-center">
-      <p>{{ coreCoursesSatisfied >= 5? 'Requirement for core courses met.':'At least 5 core courses should be chosen'}} </p>
+      <p>Status: Core courses selected {{coreCoursesSatisfied}}</p>
+      <p>{{ coreCoursesSatisfied >= 5? ' Requirement for core courses met.':' At least 5 core courses should be chosen'}} </p>
+      <p>Status: Advance courses selected {{csAdvancedCourses.length}}</p>
       <p>{{ csAdvancedCourses.length >= 2 && advancedCourseflag == 1? 'Requirement for advanced courses met.' : 'At least four courses must be chosen from the advanced courses. You need at least 2 CS advanced courses.' }}</p>
     </div>
       <!-- <p>{{ advancedCoursesLeft }} advanced courses left to meet the requirement.</p> -->
