--- a/src/app/addcourses/addcourses.component.html
+++ b/src/app/addcourses/addcourses.component.html
@@ -23,7 +23,7 @@
     </div> -->
     <button type="submit" class="btn btn-primary">Add </button>
   </form>
-
+<p><strong>Note: Refer course catalog to add courses</strong></p>
   <h2 class="mt-4">Course List</h2>
   <table class="table">
     <thead>
