--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,8 +29,8 @@
                 <button class="btn btn-info btn-lg btn-block" type="click" (click)="login()">Login</button>
               </div>
   
-              <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-              <p>Don't have an account? <a href="#!" class="link-info">Register here</a></p>
+              <p class="small mb-5 pb-lg-2"><a routerLink="/addcourses" class="text-muted">Skip Login For Now</a></p>
+              <p>Don't have an account? <a href="javascript:void(0);" class="link-info" (click)="showAlert()">Register here</a></p>
   
             </form>
   
